<resources>
    <string name="app_name">Pony Helper</string>
    <string name="login">Login</string>
    <string name="registrati">REGISTRATI</string>
    <string name="invito_reg">Non sei ancora registrato?\nCosa aspetti!!!</string>
    <string name="contentdescriptionfattorinoimage">contiene l\'immagine del titolo</string>
    <string name="confermapassword">Conferma password</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="email">E-mail</string>
    <string name="nome">Nome</string>
    <string name="cognome">Cognome</string>
    <string name="passcod">Password/Codice</string>
    <string name="registrazione">Registrazione</string>
    <string name="datanascita">Data di nascita</string>
    <string name="messpaglogin">Non ricordi la password? \n Clicca qui per avere un nuovo codice di accesso!!</string>
    <string name="ore">Ore</string>
    <string name="lunedi">Lun</string>
    <string name="martedi">Mar</string>
    <string name="mercoledi">Mer</string>
    <string name="giovedi">Gio</string>
    <string name="venerdi">Ven</string>
    <string name="sabato">Sab</string>
    <string name="domenica">Dom</string>
    <string name="entratemensili">ENTRATE MENSILI:\t</string>
    <string name="turni_settimanali">TURNI SETTIMANALI</string>
    <string name="dal">Dal</string>
    <string name="al">al</string>
    <string name="mv_contentdescription">Map view della consegna</string>
    <string name="infobutentrate_description">Bottone che attiva il pop up dell\'entrata correlata</string>
    <string name="connessioneriuscita">Connessione riuscita</string>
    <string name="selezionaturno">Seleziona i dati del turno</string>
    <string name="modifica">Modifica</string>
    <string name="giorno">Giorno</string>
    <string name="ora_inizio">Ora inizio</string>
    <string name="ora_fine">Ora fine</string>
    <string name="spinner_ora_fine">spinner ora fine</string>
    <string name="spinner_ora_inizio">spinner ora inizio</string>
    <string name="spinner_giorno">spinner giorno</string>
    <string name="entrate">Entrate</string>
    <string name="search_gg_mm_aaaa">Search (gg/mm/aaaa)</string>
    <string name="content_description_buttonprossimomese">bottone che permette di passare al mese susccessivo</string>
    <string name="content_description_bottonemeseprecedente">bottone chepermette di passare al mese precedente</string>
    <string name="content_description_bottoneaggiungientrata">bottone che permette di aggiungere un\'entrata</string>
    <string name="content_description_bottonegestiscicosti">bottone che permette di gestire i costo</string>
    <string name="contente_description_buttonserchentrata">bottne che permette la ricerca dell\'entrata</string>
    <string name="content_description_immaginefattortinotitle">immagine foattorino stilizzato</string>
    <string name="simboloeuro">€\t</string>
    <string name="home">Home</string>
    <string name="destinazioni">Destinazioni</string>
    <string name="turni">Turni</string>
    <string name="modifica_dati">Modifica dati</string>
    <string name="menu">Menù</string>
    <string name="calcolo_totale">Calcolo totale</string>
    <string name="user_image">user image</string>
    <string name="turni_image">turni image</string>
    <string name="mod_dati_image">mod dati image</string>
    <string name="menu_pizzeria_image">menu pizzeria image</string>
    <string name="home_image">home image</string>
    <string name="entrate_image">entrate image</string>
    <string name="destinazioni_image">destinazioni image</string>
    <string name="calcola_tot_image">calcola tot image</string>
    <string name="profilo">Profilo</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="profile">Profile</string>
    <string name="generale">Generale</string>
    <string name="utilita">Utilità</string>
    <string name="logout">Logout</string>
    <string name="info">Info</string>
    <string name="home_page">Home page</string>
    <string name="pagina_destinazioni">Pagina destinazioni</string>
    <string name="pagina_turni">Pagina turni</string>
    <string name="pagine_entrate">Pagine entrate</string>
    <string name="pagina_menu">Pagina menù</string>
    <string name="pagina_profilo">Pagina profilo</string>
    <string name="indirizzo">Indirizzo</string>
    <string name="inserisci_i_dati_del_turno">Inserisci i dati del turno</string>
    <string-array name="orari">
        <item>08:00</item>
        <item>08:30</item>
        <item>09:00</item>
        <item>09:30</item>
        <item>10:00</item>
        <item>10:30</item>
        <item>11:00</item>
        <item>11:30</item>
        <item>12:00</item>
        <item>12:30</item>
        <item>13:00</item>
        <item>13:30</item>
        <item>14:00</item>
        <item>14:30</item>
        <item>15:00</item>
        <item>15:30</item>
        <item>16:00</item>
        <item>16:30</item>
        <item>17:00</item>
        <item>17:30</item>
        <item>18:00</item>
        <item>18:30</item>
        <item>19:00</item>
        <item>19:30</item>
        <item>20:00</item>
        <item>20:30</item>
        <item>21:00</item>
        <item>21:30</item>
        <item>22:00</item>
        <item>22:30</item>
        <item>23:00</item>
        <item>23:30</item>
    </string-array>
    <string-array name="numeroMesi">
        <item>01</item>
        <item>02</item>
        <item>03</item>
        <item>04</item>
        <item>05</item>
        <item>06</item>
        <item>07</item>
        <item>08</item>
        <item>09</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
    </string-array>
    <string-array name="giorni">
        <item>Lunedì</item>
        <item>Martedì</item>
        <item>Mercoledì</item>
        <item>Giovedì</item>
        <item>Venerdì</item>
        <item>Sabato</item>
        <item>Domenica</item>
    </string-array>
    <string-array name="province">
        <item>AG</item>
        <item>AL</item>
        <item>AN</item>
        <item>AO</item>
        <item>AR</item>
        <item>AP</item>
        <item>AT</item>
        <item>AV</item>
        <item>BA</item>
        <item>BT</item>
        <item>BL</item>
        <item>BN</item>
        <item>BG</item>
        <item>BI</item>
        <item>BO</item>
        <item>BZ</item>
        <item>BS</item>
        <item>BR</item>
        <item>CA</item>
        <item>CL</item>
        <item>CB</item>
        <item>CI</item>
        <item>CE</item>
        <item>CT</item>
        <item>CZ</item>
        <item>CH</item>
        <item>CO</item>
        <item>CS</item>
        <item>CR</item>
        <item>KR</item>
        <item>CN</item>
        <item>EN</item>
        <item>FM</item>
        <item>FE</item>
        <item>FI</item>
        <item>FG</item>
        <item>FC</item>
        <item>FR</item>
        <item>GE</item>
        <item>GO</item>
        <item>GR</item>
        <item>IM</item>
        <item>IS</item>
        <item>SP</item>
        <item>AQ</item>
        <item>LT</item>
        <item>LE</item>
        <item>LC</item>
        <item>LI</item>
        <item>LO</item>
        <item>LU</item>
        <item>MC</item>
        <item>MN</item>
        <item>MS</item>
        <item>MT</item>
        <item>ME</item>
        <item>MI</item>
        <item>MO</item>
        <item>MB</item>
        <item>NA</item>
        <item>NO</item>
        <item>NU</item>
        <item>OT</item>
        <item>OR</item>
        <item>PD</item>
        <item>PA</item>
        <item>PR</item>
        <item>PV</item>
        <item>PG</item>
        <item>PU</item>
        <item>PE</item>
        <item>PC</item>
        <item>PI</item>
        <item>PT</item>
        <item>PN</item>
        <item>PZ</item>
        <item>PO</item>
        <item>RG</item>
        <item>RA</item>
        <item>RC</item>
        <item>RE</item>
        <item>RI</item>
        <item>RN</item>
        <item>RM</item>
        <item>RO</item>
        <item>SA</item>
        <item>VS</item>
        <item>SS</item>
        <item>SV</item>
        <item>SI</item>
        <item>SR</item>
        <item>SO</item>
        <item>TA</item>
        <item>TE</item>
        <item>TR</item>
        <item>TO</item>
        <item>OG</item>
        <item>TP</item>
        <item>TN</item>
        <item>TV</item>
        <item>TS</item>
        <item>UD</item>
        <item>VA</item>
        <item>VE</item>
        <item>VB</item>
        <item>VC</item>
        <item>VR</item>
        <item>VV</item>
        <item>VI</item>
        <item>VT</item>
    </string-array>
    <string name="info_generali">PonyHelper è un\'app nata nell\'estate 2021 realizzata per facilitare il lavoro del fattorino, con essa potrai gestire agevolmente i turni settimanali, tenere conto delle tue entrate e velocizzare le consegne.</string>
    <string name="info_homepag">Nella Hompage troverai i turni della settimana corrente e potrai vedere le entrate inserite del mese corrente.</string>
    <string name="info_turni">Nella pagina Turni potrai modificare o inserire un nuovo turno della settimana in corso. Potrai inserire un turno al giorno, quindi in caso inserissi la data di un turno già presente verranno apportate ad esso le modifiche selezionate.</string>
    <string name="info_entrate">Nella pagina entrate potrai visualizzare le entrate del mese scelto, aggiungere o modificare una o più righe di esse, ricordandoti che potrai inserire un\'unica entrata al giorno, potrai inoltre ricercare un\'entrata mediante la data.</string>
    <string name="info_destinazioni">Nella pagina destinazioni avrai accesso a tutte le destinazioni inserite nell\'ultimo mese, potrai velocemente ricercare la destinazione che ti interessa inserendo l\'indirizzo. Ricordati che conviene inserire le destinazioni con la condivisione della posizione una volta giunto nel lougo per avere una precisione maggiore. NON AFFIDARTI A GOOGLE MAPS SE VUOI ESSERE PRECISO, CHI FA DA SE FA PER TRE RICORDA</string>
    <string name="info_calcolotot">Nella pagina calcolo totale potrai usufruire del software di calcolo basato sui prezzi da te inseriti nel menù. Rapido ed efficiente ti saà utilissimo per gestire i totali dei tuoi ordini.</string>
    <string name="info_menu">Nella pagina menù potrai gestire i prodotti e gli ingredenti utilizzati nel tuo luogo di lavoro inserendo i prezzi riuscirai ad usufruire del software di calcolo integrato nell\'app per avere rapidamente a disposizione il totale dell\'ordine.</string>
    <string name="info_profilo">Nella pagina profilo vedrai i dati del tuo account in caso tu sia già loggato oppure potrai registrarti o effettuare il login rapidamente.</string>
    <string name="destinazione">Destinazione</string>
    <string name="content_description_button_destinazioen">bottone che porterà all\'apertura in google maps</string>
    <string name="civico">Civico</string>
    <string name="provincia">Provincia</string>
    <string name="citt">Città</string>
    <string name="cap">Cap</string>
    <string name="mancia">Mancia</string>
    <string name="note">Note</string>
    <string name="aggiungi_immagine">Aggiungi immagine</string>
    <string name="mess_popup_mod_dest">I seguenti campi verranno automaticamnete compilati tramite la lettura della tua posizione attuale. \nRICORDATI DI ATTIVARLA!</string>
    <string name="latitudine">Latitudine</string>
    <string name="longitudine">Longitudine</string>
    <string name="salva">Salva</string>
    <string name="content_description_buttn_refresch_mod_dest">bottone che refresha la localizzazione gps</string>
    <string name="content_description_binfodestinazione">bottone che apre il popupinfo destinazioen</string>
</resources>