<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tool="http://schemas.android.com/tools"
    tool:showIn="navigation_view">


    <group
        android:id="@+id/groupNavPagine"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_item_home"
            android:icon="@drawable/ic_home"
            android:title="@string/home"/>
        <item
            android:id="@+id/nav_item_destinazioni"
            android:icon="@drawable/ic_mappa"
            android:title="@string/destinazioni"/>
        <item
            android:id="@+id/nav_item_turni"
            android:icon="@drawable/ic_calendar"
            android:title="@string/turni"/>
        <item
            android:id="@+id/nav_item_entrate"
            android:icon="@drawable/ic_entrate"
            android:title="@string/entrate"/>
        <!-- <item
            android:id="@+id/nav_item_menu"
            android:icon="@drawable/ic_restourant_menu"
            android:title="@string/menu"/>
            -->
    </group>

    <group
        android:id="@+id/groupNavProfilo"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_item_profilo"
            android:title="@string/profilo"
            android:icon="@drawable/ic_user"/>
        <item
            android:id="@+id/nav_item_logout"
            android:title="@string/logout"
            android:icon="@drawable/ic_logout"/>
    </group>
    <group
        android:id="@+id/groupNavInfoHelp"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_item_info"
            android:title="@string/info"
            android:icon="@drawable/ic_info"/>
    </group>



</menu>