<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomePage">

    <TextView
        android:id="@+id/tv_turnisettmanali"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:fontFamily="@font/bangers"
        android:text="@string/turni_settimanali"
        android:textAlignment="center"
        android:textColor="@color/arancio_titolo"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextContrastCheck" />


    <TextView
        android:id="@+id/tv_meseanno"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:fontFamily="@font/bangers"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_turnisettmanali" />

    <TextView
        android:id="@+id/tv_dal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="150dp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/bangers"
        android:text="@string/dal"
        android:textSize="16sp"
        app:layout_constraintEnd_toStartOf="@+id/tv_giornoinizio"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_meseanno" />


    <TextView
        android:id="@+id/tv_giornoinizio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:fontFamily="@font/bangers"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/tv_al"
        app:layout_constraintStart_toEndOf="@+id/tv_dal"
        app:layout_constraintTop_toTopOf="@+id/tv_dal" />

    <TextView
        android:id="@+id/tv_al"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:fontFamily="@font/bangers"
        android:text="@string/al"
        android:textSize="16sp"
        app:layout_constraintEnd_toStartOf="@+id/tv_giornofine"
        app:layout_constraintStart_toEndOf="@+id/tv_giornoinizio"
        app:layout_constraintTop_toTopOf="@+id/tv_giornoinizio"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/tv_giornofine"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="150dp"
        android:fontFamily="@font/bangers"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tv_al"
        app:layout_constraintTop_toTopOf="@+id/tv_al" />


    <LinearLayout
        android:id="@+id/l_lineatitlehomepage"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="10dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_dal">


        <TextView
            android:id="@+id/tv_giornoTurno"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/giorno"
            android:textAlignment="center"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_orainiziohomepage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/ora_inizio"
            android:textAlignment="center"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_orafinehomepage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/ora_fine"
            android:textAlignment="center"
            android:textSize="16sp"
            android:textStyle="bold" />
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_turnisettimanali"
        android:layout_width="390dp"
        android:layout_height="345dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/l_lineatitlehomepage" />

    <TextView
        android:id="@+id/tv_entratemensili"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:fontFamily="@font/bangers"
        android:text="@string/entratemensili"
        android:textAlignment="viewStart"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.288"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rv_turnisettimanali" />

    <TextView
        android:id="@+id/tv_totmensile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:fontFamily="@font/bangers"
        android:textSize="24sp"
        app:layout_constraintStart_toEndOf="@+id/tv_entratemensili"
        app:layout_constraintTop_toTopOf="@+id/tv_entratemensili" />

    <TextView
        android:id="@+id/tv_simboloeurohomepage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:fontFamily="@font/bangers"
        android:text="@string/simboloeuro"
        android:textSize="24sp"
        app:layout_constraintStart_toEndOf="@+id/tv_totmensile"
        app:layout_constraintTop_toTopOf="@+id/tv_entratemensili" />

</androidx.constraintlayout.widget.ConstraintLayout>